normalization and time matching working

--- a/draft_mlp/draft_mlp_in.ipynb
+++ b/draft_mlp/draft_mlp_in.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "2a7e460776549b7d",
    "metadata": {
     "ExecuteTime": {
@@ -14,7 +14,17 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-17 09:24:39.251036: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-12-17 09:24:40.866333: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import netCDF4\n",
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "95d87a27-a83d-4a8d-8e92-036e480d8014",
    "metadata": {},
    "outputs": [
@@ -51,7 +61,7 @@
        "['C%s08', 'C%s09', 'C%s10', 'C%s13']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "87cf5c2b-bd59-4c42-b952-df0cf094a31f",
    "metadata": {},
    "outputs": [
@@ -86,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "<xarray.Dataset> Size: 10GB\n",
-      "Dimensions:   (time: 26141, len: 97714)\n",
+      "Dimensions:   (time: 26142, len: 97714)\n",
       "Coordinates:\n",
       "  * time      (time) object 209kB 2018-01-01 00:11:20 ... 2018-09-30 23:56:18\n",
       "  * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
@@ -111,13 +121,148 @@
     "GOES_dss = [xr.open_mfdataset(os.path.join(GOROOT, ch % '' + '*.nc'), combine='nested', concat_dim='time') for ch in CHS] #list of xr datasets\n",
     "for ii, gd in enumerate(GOES_dss):\n",
     "    #gd['time'] = pd.to_datetime(gd.time.values, format='%Y-%m-%d-%H:%M:%S')\n",
-    "    gd['time'] = [cftime.datetime.strptime(tstr, '%Y-%m-%d-%H:%M:%S', calendar='standard') for tstr in gd.time.values]\n",
-    "    GOES_dss[ii] = gd.sortby('time').drop_duplicates('time')\n",
+    "    gd['time'] = [cftime.datetime.strptime(tstr, '%Y-%m-%d-%H:%M:%S', calendar='julian') for tstr in gd.time.values]\n",
+    "    GOES_dss[ii] = gd.sortby('time')\n",
     "print(GOES_dss[0])\n",
     "\n",
     "IM_ds = xr.open_mfdataset(os.path.join(IMROOT, '*.nc')) #single xr dataset\n",
     "#IM_ds['time'] = pd.to_datetime(IM_ds['time'].values)\n",
     "print(IM_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e7b1d6f2-a635-4b2a-b4c6-343dbfa7cb10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8489495\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.isnan(GOES_dss[0].rad_vecs.values).sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b68e7018-1111-4155-9ed1-519ae4f0608d",
+   "metadata": {},
+   "source": [
+    "## NaN removal and normalization helper funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "669e3f2f-bec9-4d85-8482-7297bb24add5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interp_nans(np_ar):\n",
+    "    if np.isnan(np_ar).any():\n",
+    "        valid_mask = ~np.isnan(np_ar)\n",
+    "        nan_mask = np.isnan(np_ar)\n",
+    "\n",
+    "        # Create the grid for interpolation\n",
+    "        x, y = np.meshgrid(np.arange(np_ar.shape[1]), np.arange(np_ar.shape[0]))\n",
+    "\n",
+    "        # Use griddata for interpolation of the NaN values using valid data\n",
+    "        interpolated_data = griddata(\n",
+    "            points=(x[valid_mask], y[valid_mask]),\n",
+    "            values=np_ar[valid_mask],\n",
+    "            xi=(x[nan_mask], y[nan_mask]),\n",
+    "            method='nearest'\n",
+    "        )\n",
+    "\n",
+    "        return interpolated_data\n",
+    "    return np_ar\n",
+    "\n",
+    "def IMERG_lognorm(np_ar):\n",
+    "    log_ar = np.log(np_ar + peps)\n",
+    "    ar_log_norm = (log_ar - np.min(log_ar)) / (np.max(log_ar) - np.min(log_ar))\n",
+    "    return ar_log_norm, np.min(log_ar), np.max(log_ar)\n",
+    "\n",
+    "def GOES_stdnorm(np_ar):\n",
+    "    zz = (np_ar - np.nanmean(np_ar)) / np.nanstd(np_ar)\n",
+    "    zz = np.nan_to_num(zz)\n",
+    "    return zz, np.nanmean(np_ar), np.nanstd(np_ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0b17bb05-9c8d-4fda-8481-8cb766a3dc24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "C08 2.75794 0.812074\n",
+      "1\n",
+      "C09 7.6557474 2.237307\n",
+      "2\n",
+      "C10 13.370373 3.9030612\n",
+      "3\n",
+      "C13 75.89942 24.088097\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ii, gd in enumerate(GOES_dss):\n",
+    "    print(ii)\n",
+    "    #GOES_dss[ii]['rad_vecs'] = interp_nans(gd.rad_vecs.values)\n",
+    "    da, mm, ss = GOES_stdnorm(gd.rad_vecs)#.values)\n",
+    "    da = xr.DataArray(da, dims=gd.dims, coords=gd.coords)\n",
+    "    GOES_dss[ii]['rad_vecs'] = da\n",
+    "    print(CHS[ii] % '', mm, ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "953eafd4-2308-4ea1-84d3-412297697c80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray 'pmmhr' ()> Size: 4B\n",
+      "dask.array<_nanmin_skip-aggregate, shape=(), dtype=float32, chunksize=(), chunktype=numpy.ndarray> <xarray.DataArray 'pmmhr' ()> Size: 4B\n",
+      "dask.array<_nanmax_skip-aggregate, shape=(), dtype=float32, chunksize=(), chunktype=numpy.ndarray>\n"
+     ]
+    }
+   ],
+   "source": [
+    "da, mn, mx = IMERG_lognorm(IM_ds['pmmhr'])\n",
+    "da = xr.DataArray(da, dims=IM_ds.dims, coords=IM_ds.coords)\n",
+    "IM_ds['pmmhr'] = da\n",
+    "print(mn, mx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2380d9f4-c029-4ead-9793-0e670596c9b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-9.2103405 4.5992537\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mn.values, mx.values)"
    ]
   },
   {
@@ -130,39 +275,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "99bfd1a1-0e4d-4ebe-9c21-e01090a78946",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([<xarray.DataArray 'time' (time: 13022)> Size: 104kB\n",
+       "  array([cftime.datetime(2018, 1, 1, 0, 26, 20, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 0, 56, 20, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 1, 26, 20, 0, calendar='julian', has_year_zero=False),\n",
+       "         ...,\n",
+       "         cftime.datetime(2018, 9, 30, 22, 56, 18, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 26, 18, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 56, 18, 0, calendar='julian', has_year_zero=False)],\n",
+       "        dtype=object)\n",
+       "  Coordinates:\n",
+       "    * time     (time) object 104kB 2018-01-01 00:26:20 ... 2018-09-30 23:56:18,\n",
+       "  <xarray.DataArray 'time' (time: 13022)> Size: 104kB\n",
+       "  array([cftime.datetime(2018, 1, 1, 0, 26, 22, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 0, 56, 21, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 1, 26, 22, 0, calendar='julian', has_year_zero=False),\n",
+       "         ...,\n",
+       "         cftime.datetime(2018, 9, 30, 22, 56, 20, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 26, 19, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 56, 19, 0, calendar='julian', has_year_zero=False)],\n",
+       "        dtype=object)\n",
+       "  Coordinates:\n",
+       "    * time     (time) object 104kB 2018-01-01 00:26:22 ... 2018-09-30 23:56:19,\n",
+       "  <xarray.DataArray 'time' (time: 13022)> Size: 104kB\n",
+       "  array([cftime.datetime(2018, 1, 1, 0, 26, 22, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 0, 56, 22, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 1, 26, 21, 0, calendar='julian', has_year_zero=False),\n",
+       "         ...,\n",
+       "         cftime.datetime(2018, 9, 30, 22, 56, 19, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 26, 19, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 56, 19, 0, calendar='julian', has_year_zero=False)],\n",
+       "        dtype=object)\n",
+       "  Coordinates:\n",
+       "    * time     (time) object 104kB 2018-01-01 00:26:22 ... 2018-09-30 23:56:19,\n",
+       "  <xarray.DataArray 'time' (time: 13022)> Size: 104kB\n",
+       "  array([cftime.datetime(2018, 1, 1, 0, 26, 23, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 0, 56, 22, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 1, 1, 1, 26, 22, 0, calendar='julian', has_year_zero=False),\n",
+       "         ...,\n",
+       "         cftime.datetime(2018, 9, 30, 22, 56, 19, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 26, 19, 0, calendar='julian', has_year_zero=False),\n",
+       "         cftime.datetime(2018, 9, 30, 23, 56, 20, 0, calendar='julian', has_year_zero=False)],\n",
+       "        dtype=object)\n",
+       "  Coordinates:\n",
+       "    * time     (time) object 104kB 2018-01-01 00:26:23 ... 2018-09-30 23:56:20],\n",
+       " <xarray.DataArray 'time' (time: 13022)> Size: 104kB\n",
+       " array([cftime.DatetimeJulian(2018, 1, 1, 0, 30, 0, 0, has_year_zero=False),\n",
+       "        cftime.DatetimeJulian(2018, 1, 1, 1, 0, 0, 0, has_year_zero=False),\n",
+       "        cftime.DatetimeJulian(2018, 1, 1, 1, 30, 0, 0, has_year_zero=False),\n",
+       "        ...,\n",
+       "        cftime.DatetimeJulian(2018, 9, 30, 23, 0, 0, 0, has_year_zero=False),\n",
+       "        cftime.DatetimeJulian(2018, 9, 30, 23, 30, 0, 0, has_year_zero=False),\n",
+       "        cftime.DatetimeJulian(2018, 9, 30, 23, 30, 0, 0, has_year_zero=False)],\n",
+       "       dtype=object)\n",
+       " Coordinates:\n",
+       "   * time     (time) object 104kB 2018-01-01 00:30:00 ... 2018-09-30 23:30:00)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for ii, gd in enumerate(GOES_dss):\n",
     "    minutes = gd.time.dt.minute\n",
     "    min_mask = ((minutes >= 25) & (minutes <= 34)) | (minutes >= 55) | (minutes <= 4)\n",
-    "    GOES_dss[ii] = gd.where(min_mask, drop=True)\n",
+    "    GOES_dss[ii] = gd.where(min_mask, drop=True).drop_duplicates('time')\n",
     "\n",
     "fewest = np.argmin([gd.time.shape[0] for gd in GOES_dss]) #which dataset has the fewest timestamps?\n",
     "few_times = GOES_dss[fewest].time\n",
     "GOES_dss = [gd.sel(time=few_times, method='nearest') for gd in GOES_dss]\n",
-    "IM_ds = IM_ds.sel(time=few_times, method='nearest')"
+    "IM_ds = IM_ds.sel(time=few_times, method='nearest')\n",
+    "[gd.time for gd in GOES_dss], IM_ds.time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "669e3f2f-bec9-4d85-8482-7297bb24add5",
+   "execution_count": 19,
+   "id": "1f3097cb-4d5c-43c1-b3c3-6a6d95598a0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<xarray.Dataset> Size: 5GB\n",
+       " Dimensions:   (time: 13022, len: 97714)\n",
+       " Coordinates:\n",
+       "   * time      (time) object 104kB 2018-01-01 00:26:20 ... 2018-09-30 23:56:18\n",
+       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
+       " Data variables:\n",
+       "     rad_vecs  (time, len) float32 5GB -1.302 -1.118 -1.669 ... -0.6632 -0.3657\n",
+       " Attributes:\n",
+       "     description:  ABI radiance vectors,\n",
+       " <xarray.Dataset> Size: 5GB\n",
+       " Dimensions:   (time: 13022, len: 97714)\n",
+       " Coordinates:\n",
+       "   * time      (time) object 104kB 2018-01-01 00:26:22 ... 2018-09-30 23:56:19\n",
+       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
+       " Data variables:\n",
+       "     rad_vecs  (time, len) float32 5GB -1.483 -1.1 -1.755 ... -0.7778 -0.4252\n",
+       " Attributes:\n",
+       "     description:  ABI radiance vectors,\n",
+       " <xarray.Dataset> Size: 5GB\n",
+       " Dimensions:   (time: 13022, len: 97714)\n",
+       " Coordinates:\n",
+       "   * time      (time) object 104kB 2018-01-01 00:26:22 ... 2018-09-30 23:56:19\n",
+       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
+       " Data variables:\n",
+       "     rad_vecs  (time, len) float32 5GB -1.796 -1.262 -1.95 ... -0.7284 -0.3022\n",
+       " Attributes:\n",
+       "     description:  ABI radiance vectors,\n",
+       " <xarray.Dataset> Size: 5GB\n",
+       " Dimensions:   (time: 13022, len: 97714)\n",
+       " Coordinates:\n",
+       "   * time      (time) object 104kB 2018-01-01 00:26:23 ... 2018-09-30 23:56:20\n",
+       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
+       " Data variables:\n",
+       "     rad_vecs  (time, len) float32 5GB -1.778 -0.6487 -1.942 ... -0.3336 0.1885\n",
+       " Attributes:\n",
+       "     description:  ABI radiance vectors]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[gd.time.shape for gd in GOES_dss], IM_ds.time.shape"
+    "GOES_dss"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89bdd4ec-aeba-4fa7-897a-ef7215ba26bb",
+   "cell_type": "markdown",
+   "id": "c2d81f9d-5895-4c3a-8a60-b16286ce8f6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Old stuff below"
+   ]
   },
   {
    "cell_type": "markdown",
