no-lag model seems built properly, but not all encoder weights load

--- a/draft_mlp/draft_mlp_in.ipynb
+++ b/draft_mlp/draft_mlp_in.ipynb
@@ -222,6 +222,7 @@
     }
    ],
    "source": [
+    "#This normalization takes order of ~10 min\n",
     "for ii, gd in enumerate(GOES_dss):\n",
     "    print(ii)\n",
     "    #GOES_dss[ii]['rad_vecs'] = interp_nans(gd.rad_vecs.values)\n",
@@ -368,58 +369,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "1f3097cb-4d5c-43c1-b3c3-6a6d95598a0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<xarray.Dataset> Size: 5GB\n",
-       " Dimensions:   (time: 13022, len: 97714)\n",
-       " Coordinates:\n",
-       "   * time      (time) object 104kB 2018-01-01 00:26:20 ... 2018-09-30 23:56:18\n",
-       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
-       " Data variables:\n",
-       "     rad_vecs  (time, len) float32 5GB -1.302 -1.118 -1.669 ... -0.6632 -0.3657\n",
-       " Attributes:\n",
-       "     description:  ABI radiance vectors,\n",
-       " <xarray.Dataset> Size: 5GB\n",
-       " Dimensions:   (time: 13022, len: 97714)\n",
-       " Coordinates:\n",
-       "   * time      (time) object 104kB 2018-01-01 00:26:22 ... 2018-09-30 23:56:19\n",
-       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
-       " Data variables:\n",
-       "     rad_vecs  (time, len) float32 5GB -1.483 -1.1 -1.755 ... -0.7778 -0.4252\n",
-       " Attributes:\n",
-       "     description:  ABI radiance vectors,\n",
-       " <xarray.Dataset> Size: 5GB\n",
-       " Dimensions:   (time: 13022, len: 97714)\n",
-       " Coordinates:\n",
-       "   * time      (time) object 104kB 2018-01-01 00:26:22 ... 2018-09-30 23:56:19\n",
-       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
-       " Data variables:\n",
-       "     rad_vecs  (time, len) float32 5GB -1.796 -1.262 -1.95 ... -0.7284 -0.3022\n",
-       " Attributes:\n",
-       "     description:  ABI radiance vectors,\n",
-       " <xarray.Dataset> Size: 5GB\n",
-       " Dimensions:   (time: 13022, len: 97714)\n",
-       " Coordinates:\n",
-       "   * time      (time) object 104kB 2018-01-01 00:26:23 ... 2018-09-30 23:56:20\n",
-       "   * len       (len) int64 782kB 0 1 2 3 4 5 ... 97709 97710 97711 97712 97713\n",
-       " Data variables:\n",
-       "     rad_vecs  (time, len) float32 5GB -1.778 -0.6487 -1.942 ... -0.3336 0.1885\n",
-       " Attributes:\n",
-       "     description:  ABI radiance vectors]"
+       "[(13022, 97714),\n",
+       " (13022, 97714),\n",
+       " (13022, 97714),\n",
+       " (13022, 97714),\n",
+       " (13022, 39125)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GOES_dss"
+    "xtrain = [ds.rad_vecs.values for ds in GOES_dss] + [IM_ds.pmmhr.values]\n",
+    "[ar.shape for ar in xtrain]"
    ]
   },
   {
@@ -432,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "bfd5a113-aefb-4da2-b90e-99563ca66ee5",
    "metadata": {},
    "outputs": [],
@@ -459,11 +430,16 @@
     "        return decoded\n",
     "\n",
     "class MLPnolag(Model):\n",
-    "    def __init__(self, enc_paths, latent_dim, out_dim):\n",
+    "    def __init__(self, enc_paths, inputs, latent_dim, out_dim):\n",
     "        super(MLPnolag, self).__init__()\n",
     "        self.encs = [Autoencoder(LD, [INDIM[ii]]) for ii in range(len(enc_paths))]#[load_model(pt) for pt in enc_paths]\n",
-    "        #print(self.encs)\n",
-    "        [en.predict(np.zeros(INDIM[ii])) for ii, en in enumerate(self.encs)]\n",
+    "        print(self.encs)\n",
+    "        self.encs[-1].predict(IM_ds.pmmhr.values)\n",
+    "        self.encs[-1].load_weights(enc_paths[-1]) #Loading weights works for IMERG\n",
+    "        self.encs[-2].predict(xtrain[-1])\n",
+    "        self.encs[-2].load_weights(enc_paths[-2]) #loading weights fails for GOES, probably trained on different tf version\n",
+    "        [en.predict(inputs[ii]) for ii, en in enumerate(self.encs)]\n",
+    "        [en.summary() for en in self.encs]\n",
     "        [en.load_weights(enc_paths[ii]) for ii, en in enumerate(self.encs)]\n",
     "        self.mlp = tf.keras.Sequential([\n",
     "                layers.Flatten(), # 64k\n",
@@ -482,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "7073432c-3762-4e00-bb7d-1b0b3436dd6b",
    "metadata": {},
    "outputs": [
@@ -490,13 +466,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m3054/3054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 11ms/step\n",
-      "\u001b[1m 866/3054\u001b[0m \u001b[32m━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:31\u001b[0m 42ms/step"
+      "[<Autoencoder name=autoencoder_42, built=False>, <Autoencoder name=autoencoder_43, built=False>, <Autoencoder name=autoencoder_44, built=False>, <Autoencoder name=autoencoder_45, built=False>, <Autoencoder name=autoencoder_46, built=False>]\n",
+      "\u001b[1m407/407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step\n",
+      "\u001b[1m407/407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 16ms/step\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "A total of 4 objects could not be loaded. Example error message for object <Dense name=dense_182, built=True>:\n\nLayer 'dense_182' expected 2 variables, but received 0 variables during loading. Expected: ['kernel', 'bias']\n\nList of objects that could not be loaded:\n[<Dense name=dense_182, built=True>, <Dense name=dense_183, built=True>, <Dense name=dense_180, built=True>, <Dense name=dense_181, built=True>]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#This cell could take order of ~30 min to run\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m testnn \u001b[38;5;241m=\u001b[39m MLPnolag(WTF, xtrain, LD, \u001b[38;5;241m30\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[46], line 30\u001b[0m, in \u001b[0;36mMLPnolag.__init__\u001b[0;34m(self, enc_paths, inputs, latent_dim, out_dim)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencs[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mload_weights(enc_paths[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencs[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m.\u001b[39mpredict(xtrain[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 30\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencs[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m.\u001b[39mload_weights(enc_paths[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m     31\u001b[0m [en\u001b[38;5;241m.\u001b[39mpredict(inputs[ii]) \u001b[38;5;28;01mfor\u001b[39;00m ii, en \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencs)]\n\u001b[1;32m     32\u001b[0m [en\u001b[38;5;241m.\u001b[39msummary() \u001b[38;5;28;01mfor\u001b[39;00m en \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencs]\n",
+      "File \u001b[0;32m~/miniconda3/envs/IST597tf/lib/python3.11/site-packages/keras/src/utils/traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/miniconda3/envs/IST597tf/lib/python3.11/site-packages/keras/src/saving/saving_lib.py:631\u001b[0m, in \u001b[0;36m_raise_loading_failure\u001b[0;34m(error_msgs, warn_only)\u001b[0m\n\u001b[1;32m    629\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(msg)\n\u001b[1;32m    630\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 631\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n",
+      "\u001b[0;31mValueError\u001b[0m: A total of 4 objects could not be loaded. Example error message for object <Dense name=dense_182, built=True>:\n\nLayer 'dense_182' expected 2 variables, but received 0 variables during loading. Expected: ['kernel', 'bias']\n\nList of objects that could not be loaded:\n[<Dense name=dense_182, built=True>, <Dense name=dense_183, built=True>, <Dense name=dense_180, built=True>, <Dense name=dense_181, built=True>]"
      ]
     }
    ],
    "source": [
-    "testnn = MLPnolag(WTF, LD, 30)"
+    "#This cell could take order of ~30 min to run\n",
+    "testnn = MLPnolag(WTF, xtrain, LD, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d8086c5-dfa6-4564-954d-38baedbce326",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e4358067-9c54-4651-b741-41bf735c93f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.18.0'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.__version__"
    ]
   },
   {
